updated category api